Archive2/52/42cf397f13adf0/output
main.cpp:4:13: error: variable or field 'f' declared void
 void f(std::vector v)
             ^
main.cpp:4:20: error: missing template arguments before 'v'
 void f(std::vector v)
                    ^
main.cpp: In function 'int main()':
main.cpp:12:8: error: 'f' was not declared in this scope
     f(v);
        ^
