Archive2/52/42cf397f13adf0/main.cpp
#include <iostream>
#include <vector>

void f(std::vector v)
{
    /* ... */
}

int main()
{
    std::vector<int> v;
    f(v);
}